[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/boss_final.png" type="Texture" id=1]
[ext_resource path="res://scenes/shadow_sprite/shadow_sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/boss/boss_final.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/CREAMnstr_Beast Vocalisation_09.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="BossFinal" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 0
script = ExtResource( 3 )

[node name="ShadowSprite" parent="." instance=ExtResource( 2 )]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="SweepTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PauseTimer2" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WakeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Roar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
pitch_scale = 0.8

[connection signal="timeout" from="SweepTimer" to="." method="_on_SweepTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="WakeTimer" to="." method="_on_WakeTimer_timeout"]
